--- a/src/index.css
+++ b/src/index.css
@@ -22,5 +22,9 @@
 }
 
 .shadow {
-  box-shadow: 0px 10px 5px 0px rgba(0,0,0,.5);
+  box-shadow: 0px 10px 5px 0px rgba(0, 0, 0, 0.5);
+}
+
+.date {
+  -webkit-appearance: none;
 }
